fix: mobile menu z-index

--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -87,6 +87,7 @@ a {
 	flex-direction: column;
 	align-items: center;
 	justify-content: flex-start;
+	z-index: 100;
 }
 
 .mobile-menu {
